fixed header overlapping with content in article 1

--- a/articlelistings/style/article.css
+++ b/articlelistings/style/article.css
@@ -19,7 +19,7 @@ p {
 .content {
 	font-size: 0.9em;
 	text-align: justify;
-	margin: 0px 0px 0px 0px;
+	margin: 100px 0px 0px 0px;
 }
 .content p {
 	margin: 20px 30px 20px 30px
